# beetchops-engine

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  app.cpp  beetchops.cpp  engine.cpp  engine.hpp  main.cpp
test/: CMakeLists.txt  app_tests.cpp  engine_tests.cpp
